; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_test_and_clear_bit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_test_and_clear_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bxe_test_and_clear_bit(i32 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64* %1, i64** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = shl i32 1, %6
  store i32 %7, i32* %3, align 4
  br label %8

8:                                                ; preds = %11, %2
  %9 = load i64*, i64** %4, align 8
  %10 = load volatile i64, i64* %9, align 8
  store i64 %10, i64* %5, align 8
  br label %11

11:                                               ; preds = %8
  %12 = load i64*, i64** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i32, i32* %3, align 4
  %16 = xor i32 %15, -1
  %17 = sext i32 %16 to i64
  %18 = and i64 %14, %17
  %19 = call i64 @atomic_cmpset_acq_long(i64* %12, i64 %13, i64 %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %8, label %21

21:                                               ; preds = %11
  %22 = load i64, i64* %5, align 8
  %23 = load i32, i32* %3, align 4
  %24 = sext i32 %23 to i64
  %25 = and i64 %22, %24
  %26 = trunc i64 %25 to i32
  ret i32 %26
}

declare dso_local i64 @atomic_cmpset_acq_long(i64*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
